<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_body_effect_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/effect_btn_padding"
        android:stepSize="1"
        android:theme="@style/SliderTheme"
        android:valueFrom="0"
        android:valueTo="100"
        app:thumbColor="@color/colorAccent"
        app:thumbRadius="@dimen/slider_thumbradius"
        app:tickVisible="false"
        app:trackColorActive="@color/colorAccent"
        app:trackColorInactive="@color/colorPrimary"
        app:trackHeight="@dimen/slider_trackheight" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
            android:id="@+id/rb_effect_recover"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:button="@null"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/effect_recover"
            android:textColor="@color/color_80ffffff"
            android:textSize="12dp"
            custom:drawableSizes="40dp"
            custom:drawableTop="@drawable/recovery"/>

        <View
            android:layout_width="1px"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@color/color_88ffffff" />

        <HorizontalScrollView
            android:id="@+id/horizontal_body_scrollv_beauty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:scrollbars="none">

            <com.netease.yunxin.app.one2one.ui.view.NEBeautyRadioGroup
                android:id="@+id/radio_group_body_effect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_thinface"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_thinface"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/shoulian"
                    android:focusable="true" />

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_vface"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_vface"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/vlian"
                    android:focusable="true" />

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_narrowface"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_narrowface"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/zhailian"
                    android:focusable="true" />

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_smallface"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_smallface"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/xiaolian"
                    android:focusable="true" />

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_underjaw"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_underjaw"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/xiahe"
                    android:focusable="true" />

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_cheekbone"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_cheekbone"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/lianjia"
                    android:focusable="true" />

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_jaw"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_jaw"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/xiaba"
                    android:focusable="true" />

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_bigeye"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_bigeye"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/dayan"
                    android:focusable="true" />

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_eyedis"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_eyedis"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/yanju"
                    android:focusable="true" />

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_eyecorner"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_eyecorner"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/yanjiao"
                    android:focusable="true" />

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_roundeye"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_roundeye"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/yuanyan"
                    android:focusable="true" />


                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_mouth"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_mouth"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/zuiba"
                    android:focusable="true" />

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_mouthangle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_mouthangle"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/zuijiao"
                    android:focusable="true" />

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_smallnose"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_smallnose"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/xiaobi"
                    android:focusable="true" />

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_longnose"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_longnose"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/changbi"
                    android:focusable="true" />

                <com.netease.yunxin.app.one2one.ui.view.MyRadioButton
                    android:id="@+id/rb_effect_philtrum"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/effect_philtrum"
                    android:textColor="@color/color_80ffffff"
                    android:textSize="12dp"
                    custom:drawableSizes="40dp"
                    custom:drawableTop="@drawable/renzhong"
                    android:focusable="true" />

            </com.netease.yunxin.app.one2one.ui.view.NEBeautyRadioGroup>
        </HorizontalScrollView>
    </LinearLayout>
</LinearLayout>
