<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright (c) 2022 NetEase, Inc.  All rights reserved.
  ~  * Use of this source code is governed by a MIT license that can be found in the LICENSE file.
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eff1f4"
    android:orientation="vertical">

    <com.netease.yunxin.app.one2one.ui.view.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBar_title="@string/pstn_setting_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_circle_rect"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_high_keep_alive_feature"
                    android:textColor="@color/color_black_333333"
                    android:textSize="16dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <Switch
                    android:id="@+id/switch_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:checked="false"
                    android:switchMinWidth="46dp"
                    android:thumb="@drawable/video_group_switch_thumb"
                    android:track="@drawable/video_group_switch_track"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:background="@android:color/holo_green_dark" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title_level1"
                android:textColor="@color/color_222222"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/content1"
                android:textColor="@color/color_333333"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/content2"
                android:textColor="@color/color_333333"
                android:textSize="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/color_333333"
                android:textSize="12dp" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>