<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eff1f4">

    <com.netease.yunxin.app.one2one.ui.view.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleBar_title_bg_color="@android:color/transparent"
        app:titleBar_title="@string/input_other_test_account" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:paddingRight="22dp"
        android:gravity="center_vertical"
        android:text="@string/save"
        android:textColor="@color/color_ff4061"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.netease.yunxin.app.one2one.ui.view.ClearEditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_bindphone_edittext"
        android:gravity="center_vertical"
        android:hint="@string/please_input_other_phone"
        android:inputType="number"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:maxLength="11"
        android:textColor="@color/color_333333"
        android:textColorHint="@color/color_b3b7bc"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar" />

    <TextView
        android:paddingLeft="20dp"
        android:id="@+id/tv_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_333333"
        android:textSize="14sp"
        android:paddingTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:id="@+id/tv_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bind_phone_tips"
        android:textColor="@color/color_333333"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_number" />
</androidx.constraintlayout.widget.ConstraintLayout>